# test

pendant/: platformio.ini
pendant/src/: DisplayManager.cpp  DisplayManager.h  Keyboard.cpp  Keyboard.h  MenuController.cpp  MenuController.h  PrinterI2C.cpp  PrinterI2C.h  Status.cpp  Status.h  encoder.cpp  encoder.h  main.cpp  printer_status.h
pendant_pico/: CMakeLists.txt  platformio.ini
pendant_pico/my_pico_project/lib/: keypad.cpp  keypad.hpp  lcd.cpp  lcd.hpp  pin.hpp
pendant_pico/my_pico_project/src/: main.cpp  ui_pages.cpp  ui_pages.hpp
